Залил проект как локальная копия

--- a/breathing.html
+++ b/breathing.html
@@ -107,24 +107,30 @@
 
     <section class="breathing-course-detail">
       <div class="breathing-course-detail__content">
-        <h2 class="breathing-course-detail__title">БАЗОВЫЙ КУРС (УРОВЕНЬ 1):</h2>
-        <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 30м и больше (это больше одного короткого бассейна), задерживать дыхание на 1'30. Конечно же узнаете, как функционирует наше тело под водой, научитесь безопасно нырять и правильно поступать в экстренной ситуации. После прохождения уровня уже можно уверенно нырять с маской на море, продолжать тренировки в бассейне (с тренером или напарником!)</p>
+        <div class="breathing-course-detail__text-group">
+          <h2 class="breathing-course-detail__title">БАЗОВЫЙ КУРС (УРОВЕНЬ 1):</h2>
+          <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 30м и больше (это больше одного короткого бассейна), задерживать дыхание на 1'30. Конечно же узнаете, как функционирует наше тело под водой, научитесь безопасно нырять и правильно поступать в экстренной ситуации. После прохождения уровня уже можно уверенно нырять с маской на море, продолжать тренировки в бассейне (с тренером или напарником!)</p>
+        </div>
         <a href="#" class="breathing-course-detail__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
 
     <section class="breathing-course-detail">
       <div class="breathing-course-detail__content">
-        <h2 class="breathing-course-detail__title">ПРОДВИНУТЫЙ (УРОВЕНЬ 2):</h2>
-        <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 50м и больше, задерживать дыхание на 2'30! Совершенствуем навыки ныряния, расслабления, более детально прорабатываем технику гребка, работаем с сознанием.</p>
+        <div class="breathing-course-detail__text-group">
+          <h2 class="breathing-course-detail__title">ПРОДВИНУТЫЙ (УРОВЕНЬ 2):</h2>
+          <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 50м и больше, задерживать дыхание на 2'30! Совершенствуем навыки ныряния, расслабления, более детально прорабатываем технику гребка, работаем с сознанием.</p>
+        </div>
         <a href="#" class="breathing-course-detail__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
 
     <section class="breathing-course-detail">
       <div class="breathing-course-detail__content">
-        <h2 class="breathing-course-detail__title">СУПЕР ПРОДВИНУТЫЙ (УРОВЕНЬ 3):</h2>
-        <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 75м и более, задерживать дыхание на 3'30. На этом уровне учимся работать с дыхательным дискомфортом, разбираем техники глубокого расслабления, оттачиваем технику нырка, осваиваем разные техники, можно взять с собой моноласту.</p>
+        <div class="breathing-course-detail__text-group">
+          <h2 class="breathing-course-detail__title">СУПЕР ПРОДВИНУТЫЙ (УРОВЕНЬ 3):</h2>
+          <p class="breathing-course-detail__text">Вы научитесь проплывать под водой 75м и более, задерживать дыхание на 3'30. На этом уровне учимся работать с дыхательным дискомфортом, разбираем техники глубокого расслабления, оттачиваем технику нырка, осваиваем разные техники, можно взять с собой моноласту.</p>
+        </div>
         <a href="#" class="breathing-course-detail__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
@@ -161,24 +167,30 @@
 
     <section class="ocean-cta">
       <div class="ocean-cta__content">
-        <h2 class="ocean-cta__title">БАЗОВЫЙ КУРС (1 ВОЛНА):</h2>
-        <p class="ocean-cta__text">Вы научитесь нырять на глубину 12-20м и задерживать дыхание на 1'30. Также узнаете о безопасности погружений и научитесь страховать и спасать себя и друг друга в воде.</p>
+        <div class="ocean-cta__text-group">
+          <h2 class="ocean-cta__title">БАЗОВЫЙ КУРС (1 ВОЛНА):</h2>
+          <p class="ocean-cta__text">Вы научитесь нырять на глубину 12-20м и задерживать дыхание на 1'30. Также узнаете о безопасности погружений и научитесь страховать и спасать себя и друг друга в воде.</p>
+        </div>
         <a href="#" class="ocean-cta__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
 
     <section class="ocean-cta">
       <div class="ocean-cta__content">
-        <h2 class="ocean-cta__title">ПРОДВИНУТЫЙ КУРС (2 ВОЛНА):</h2>
-        <p class="ocean-cta__text">Вы научитесь нырять на глубину 25-34м и задерживать дыхание на 2'30. Закрепляем и углубляем навыки страховки и спасения.</p>
+        <div class="ocean-cta__text-group">
+          <h2 class="ocean-cta__title">ПРОДВИНУТЫЙ КУРС (2 ВОЛНА):</h2>
+          <p class="ocean-cta__text">Вы научитесь нырять на глубину 25-34м и задерживать дыхание на 2'30. Закрепляем и углубляем навыки страховки и спасения.</p>
+        </div>
         <a href="#" class="ocean-cta__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
 
     <section class="ocean-cta">
       <div class="ocean-cta__content">
-        <h2 class="ocean-cta__title">ЕЩЕ БОЛЕЕ ПРОДВИНУТЫЙ КУРС (З ВОЛНА):</h2>
-        <p class="ocean-cta__text">Вы научитесь нырять на глубину 35-40м и задерживать дыхание на 3'30. Конечно уделяем внимание безопасности и учимся обеспечивать безопасность при нырках на такие глубины. По окончании курса уже можно ассистировать инструктору на курсах и тренировках Сертификация по системе Молчановс после сдачи нормативов и экзамена.</p>
+        <div class="ocean-cta__text-group">
+          <h2 class="ocean-cta__title">ЕЩЕ БОЛЕЕ ПРОДВИНУТЫЙ КУРС (З ВОЛНА):</h2>
+          <p class="ocean-cta__text">Вы научитесь нырять на глубину 35-40м и задерживать дыхание на 3'30. Конечно уделяем внимание безопасности и учимся обеспечивать безопасность при нырках на такие глубины. По окончании курса уже можно ассистировать инструктору на курсах и тренировках Сертификация по системе Молчановс после сдачи нормативов и экзамена.</p>
+        </div>
         <a href="#" class="ocean-cta__btn" data-modal="enrollment">ЗАПИСАТЬСЯ</a>
       </div>
     </section>
